--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         console.warn('Atention')
 
         console.error('Tipeaste mal la ubicación')
+
+        console.log('Hacer practica de JS')
     </script>
 </body>
 </html>
